prometheus/base/prometheus/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: prometheus
spec:
  hosts:
    - metrics.local.io
  gateways:
    - prometheus-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-server.prometheus.svc.cluster.local
            port:
              number: 80
